# python-project-49

./: .gitignore  README.md  makefile  pyproject.toml
brain_games/: cli.py
brain_games/game_engine/: base.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet-code/games/: gcd.py  prime.py
hexlet-code/scripts/: brain_game.py
